@@ -1,6 +1,7 @@
 Version 3.4.1-devel
 -------------------
 - Fix bug in binary_decoder and pointer_decoder introduces by 3.4.0.
+- Unify the pointer and value types for unaligned_{lower,upper}_bound.
 
 
 Version 3.4.0 [17 Dec 2017]
